--- a/home.html
+++ b/home.html
@@ -69,6 +69,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <a href="admin.html" class="btn">Go to Admin Dashboard</a>
+
       </ul>
     </nav>
   </header>
