--- a/lecturer-dashboard.html
+++ b/lecturer-dashboard.html
@@ -1,194 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lecturer Dashboard - SchoolMS</title>
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      background: #fff;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    table th, table td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-
-    table th {
-      background-color: #2c3e50;
-      color: white;
-    }
-
-    table tr:hover {
-      background-color: #f1f1f1;
-    }
-
-    .action-btn {
-      padding: 5px 10px;
-      margin-right: 5px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .edit-btn { background-color: #1abc9c; color: #fff; }
-    .save-btn { background-color: #16a085; color: #fff; }
-    .delete-btn { background-color: #e74c3c; color: #fff; }
-
-    #addStudentBtn {
-      margin-bottom: 15px;
-    }
-
-    input[type="number"] {
-      width: 60px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lecturer Dashboard</title>
+<style>
+body{font-family:Arial,sans-serif;margin:0;padding:0;background:#f4f6f8;display:flex;}
+.sidebar{width:220px;background:#2c3e50;color:white;height:100vh;position:fixed;display:flex;flex-direction:column;}
+.sidebar h2{text-align:center;padding:20px 0;border-bottom:1px solid #3e4e5e;margin:0;}
+.sidebar ul{list-style:none;padding:0;margin:0;flex:1;}
+.sidebar ul li{border-bottom:1px solid #3e4e5e;}
+.sidebar ul li a{display:block;padding:15px 20px;color:white;text-decoration:none;transition:0.3s;}
+.sidebar ul li a:hover, .sidebar ul li a.active{background:#2980b9;}
+.main{margin-left:220px;padding:20px;flex:1;}
+header{display:flex;justify-content:space-between;align-items:center;background:#fff;padding:10px 20px;box-shadow:0 2px 4px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000;}
+table{width:100%;border-collapse:collapse;margin-top:20px;background:#fff;box-shadow:0 3px 6px rgba(0,0,0,0.1);border-radius:10px;overflow:hidden}
+table th,table td{padding:12px;text-align:left;border-bottom:1px solid #ddd}
+table th{background:#2c3e50;color:white}
+.card-container{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;margin-top:20px;}
+.card{background:#fff;padding:20px;border-radius:10px;box-shadow:0 3px 6px rgba(0,0,0,0.1);text-align:center;}
+.card h3{margin:0 0 10px;color:#2c3e50;}
+input[type=number]{width:70px}
+button{padding:5px 10px;border:none;border-radius:5px;cursor:pointer}
+.addBtn{background:#2980b9;color:white;margin-bottom:15px}
+.deleteBtn{background:#e74c3c;color:white}
+.message-container{margin-top:20px;background:#fff;padding:20px;border-radius:10px;box-shadow:0 3px 6px rgba(0,0,0,0.1)}
+.message-container h3{margin-top:0}
+.message-list{max-height:200px;overflow-y:auto;margin-bottom:10px;padding:5px;border:1px solid #ddd;border-radius:5px;background:#f9f9f9}
+.message-list p{margin:5px 0}
+.message-input{display:flex;gap:10px;margin-top:10px}
+.message-input input{flex:1;padding:8px;border-radius:5px;border:1px solid #ccc}
+.message-input button{padding:8px 15px;border-radius:5px;background:#2980b9;color:white;border:none;cursor:pointer}
+#toast{visibility:hidden;min-width:200px;background:#27ae60;color:white;text-align:center;border-radius:8px;padding:10px;position:fixed;bottom:20px;right:20px;opacity:0;transition:opacity 0.5s,visibility 0.5s}
+#toast.show{visibility:visible;opacity:1}
+</style>
 </head>
 <body>
+
+<div class="sidebar">
+  <h2>Lecturer Panel</h2>
+  <ul>
+    <li><a href="#" class="active" data-section="students">Manage Students</a></li>
+    <li><a href="#" data-section="messages">Messages</a></li>
+    <li><a href="#" data-section="reports">Reports</a></li>
+    <li><a href="#" data-section="studyMaterials">Study Materials</a></li>
+  </ul>
+</div>
+
+<div class="main">
 <header>
-  <div class="logo">
-    <img src="image/school-management-system-logo.png" alt="School Logo" class="logo-img">
-  </div>
-  <nav>
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="#" id="logoutBtn">Logout</a></li>
-    </ul>
-  </nav>
+  <h2>Welcome, <span id="userName"></span>!</h2>
+  <button id="logoutBtn">Logout</button>
 </header>
 
-<div class="dashboard-container">
-  <h1>Welcome, <span id="userName"></span>!</h1>
-  <p>This is your lecturer dashboard.</p>
-
-  <h2>Manage Students</h2>
-  <button id="addStudentBtn" class="btn">Add New Student</button>
-  
+<section id="studentsSection">
+  <h2>Manage Students & Courses</h2>
+  <button id="addStudentBtn" class="addBtn">Add New Student</button>
   <table id="studentTable">
     <thead>
-      <tr>
-        <th>Name</th>
-        <th>Student Number</th>
-        <th>Grade</th>
-        <th>Attendance %</th>
-        <th>Actions</th>
-      </tr>
+      <tr><th>Name</th><th>Student Number</th><th>Course</th><th>Grade</th><th>Attendance</th><th>Action</th></tr>
     </thead>
     <tbody></tbody>
   </table>
+</section>
+
+<section id="messagesSection" style="display:none">
+  <div class="message-container">
+    <h3>Messages</h3>
+    <select id="messageRecipient">
+      <option value="">Select Recipient</option>
+    </select>
+    <div class="message-list" id="messageList"></div>
+    <div class="message-input">
+      <input type="text" id="messageText" placeholder="Type a message...">
+      <button id="sendMessageBtn">Send</button>
+    </div>
+  </div>
+</section>
+
+<section id="reportsSection" style="display:none">
+  <h2>Course Reports</h2>
+  <div id="reportCards" class="card-container"></div>
+</section>
+
+<section id="studyMaterialsSection" style="display:none">
+  <h2>Upload Study Materials</h2>
+  <input type="text" id="materialTitle" placeholder="Material Title">
+  <input type="file" id="materialFile" accept="application/pdf">
+  <button id="uploadMaterialBtn" class="addBtn">Upload PDF</button>
+  <div id="uploadedMaterials" class="card-container"></div>
+</section>
+
 </div>
+
+<div id="toast"></div>
 
 <script>
 const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+if(!currentUser||currentUser.userType!=='LECTURER'){alert("Login as lecturer");window.location.href="login.html";}
+document.getElementById('userName').textContent=currentUser.name;
 
-if (!currentUser || currentUser.userType !== "LECTURER") {
-  window.location.href = "login.html";
-} else {
-  document.getElementById('userName').textContent = currentUser.name;
+function showToast(msg){const t=document.getElementById('toast');t.textContent=msg;t.classList.add('show');setTimeout(()=>t.classList.remove('show'),2000)}
+
+const sections={
+  students:document.getElementById("studentsSection"),
+  messages:document.getElementById("messagesSection"),
+  reports:document.getElementById("reportsSection"),
+  studyMaterials:document.getElementById("studyMaterialsSection")
+};
+document.querySelectorAll(".sidebar ul li a").forEach(link=>{
+  link.addEventListener("click",e=>{
+    e.preventDefault();
+    document.querySelectorAll(".sidebar ul li a").forEach(a=>a.classList.remove("active"));
+    link.classList.add("active");
+    Object.keys(sections).forEach(k=>sections[k].style.display=(k===link.dataset.section)?"block":"none");
+    if(link.dataset.section==="messages") renderRecipients();
+    if(link.dataset.section==="reports") renderReports();
+    if(link.dataset.section==="studyMaterials") renderUploadedMaterials();
+  });
+});
+
+const getStudents=()=> (JSON.parse(localStorage.getItem('users'))||[]).filter(u=>u.userType==='STUDENT');
+const getEnrollments=()=> JSON.parse(localStorage.getItem('enrollments'))||[];
+const saveEnrollments=d=>localStorage.setItem('enrollments',JSON.stringify(d));
+const getMessages=()=> JSON.parse(localStorage.getItem('messages'))||[];
+const saveMessages=m=>localStorage.setItem('messages',JSON.stringify(m));
+const getMaterials=()=> JSON.parse(localStorage.getItem('studyMaterials'))||[];
+const saveMaterials=m=>localStorage.setItem('studyMaterials',JSON.stringify(m));
+
+function renderStudents(){
+  const tbody=document.querySelector("#studentTable tbody");
+  tbody.innerHTML="";
+  const students=getStudents(),enrollments=getEnrollments();
+  enrollments.forEach(e=>{
+    const s=students.find(st=>st.studentNumber===e.studentNumber);
+    if(!s) return;
+    const tr=document.createElement('tr');
+    tr.innerHTML=`<td>${s.name}</td>
+      <td>${e.studentNumber}</td>
+      <td>${e.course}</td>
+      <td><input type="number" value="${e.grade}" min="0" max="100" data-s="${e.studentNumber}" data-c="${e.course}" class="gradeInput"></td>
+      <td><input type="number" value="${e.attendance}" min="0" max="100" data-s="${e.studentNumber}" data-c="${e.course}" class="attInput"></td>
+      <td><button class="deleteBtn" data-s="${e.studentNumber}" data-c="${e.course}">Delete</button></td>`;
+    tbody.appendChild(tr);
+  });
+  document.querySelectorAll(".gradeInput").forEach(i=>i.addEventListener("change",e=>{
+    const {s,c}=e.target.dataset;const es=getEnrollments();const r=es.find(x=>x.studentNumber===s&&x.course===c);
+    if(r){r.grade=parseInt(e.target.value);saveEnrollments(es);showToast("✅ Grade updated");}
+  }));
+  document.querySelectorAll(".attInput").forEach(i=>i.addEventListener("change",e=>{
+    const {s,c}=e.target.dataset;const es=getEnrollments();const r=es.find(x=>x.studentNumber===s&&x.course===c);
+    if(r){r.attendance=parseInt(e.target.value);saveEnrollments(es);showToast("✅ Attendance updated");}
+  }));
+  document.querySelectorAll(".deleteBtn").forEach(b=>b.addEventListener("click",()=>{
+    const {s,c}=b.dataset;let es=getEnrollments();es=es.filter(x=>!(x.studentNumber===s&&x.course===c));
+    saveEnrollments(es);renderStudents();showToast("✅ Enrollment deleted");
+  }));
 }
 
-// 20 Mock students
-let students = [
-  { id: 1, name: "John Van Wyk", studentNumber: "22305", grade: 75, attendance: 90 },
-  { id: 2, name: "Jane Smith", studentNumber: "22192", grade: 88, attendance: 95 },
-  { id: 3, name: "Anda Bokwana", studentNumber: "22286", grade: 65, attendance: 80 },
-  { id: 4, name: "Lazola Phiri", studentNumber: "22291", grade: 92, attendance: 98 },
-  { id: 5, name: "Chimanga Mutambara", studentNumber: "22183", grade: 70, attendance: 85 },
-  { id: 6, name: "Lihle Ari", studentNumber: "22281", grade: 81, attendance: 90 },
-  { id: 7, name: "David Lee", studentNumber: "22293", grade: 74, attendance: 88 },
-  { id: 8, name: "Chantell Van De Linda", studentNumber: "22645", grade: 89, attendance: 92 },
-  { id: 9, name: "Daniel Martinez", studentNumber: "22352", grade: 77, attendance: 85 },
-  { id: 10, name: "Ayabonga Khumalo", studentNumber: "22901", grade: 91, attendance: 96 }
-  
- 
-];
+document.getElementById("addStudentBtn").addEventListener("click",()=>{
+  const name=prompt("Student name:");
+  const studentNumber="2"+Math.floor(1000+Math.random()*9000);
+  let users=JSON.parse(localStorage.getItem('users'))||[];
+  users.push({name,userType:"STUDENT",studentNumber,email:"student"+studentNumber+"@school.com"});
+  localStorage.setItem('users',JSON.stringify(users));
+  let enrollments=getEnrollments();
+  ["CNF2","ADT2","ADP2","IT2","PROJECT2"].forEach(c=>enrollments.push({studentNumber,course:c,grade:0,attendance:0}));
+  saveEnrollments(enrollments);
+  renderStudents();
+  showToast("✅ Student added");
+});
+document.getElementById("logoutBtn").addEventListener("click",()=>{localStorage.removeItem('currentUser');window.location.href="login.html";});
+renderStudents();
+setInterval(renderStudents,1000);
 
-function renderStudents() {
-  const tbody = document.querySelector('#studentTable tbody');
-  tbody.innerHTML = '';
+function renderRecipients(){
+  const sel=document.getElementById("messageRecipient");
+  sel.innerHTML='<option value="">Select Recipient</option>';
+  const users=JSON.parse(localStorage.getItem('users'))||[];
+  users.filter(u=>u.userType==='STUDENT' || u.userType==='ADMIN').forEach(u=>{
+    const opt=document.createElement("option"); opt.value=u.email; opt.textContent=(u.userType==='ADMIN'?'Admin - ':'')+u.name; sel.appendChild(opt);
+  });
+  renderMessages();
+}
 
-  students.forEach(student => {
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${student.name}</td>
-      <td>${student.studentNumber}</td>
-      <td><span class="grade">${student.grade}</span></td>
-      <td><span class="attendance">${student.attendance}</span></td>
-      <td>
-        <button class="edit-btn action-btn">Edit</button>
-        <button class="save-btn action-btn" style="display:none;">Save</button>
-        <button class="delete-btn action-btn">Delete</button>
-      </td>
-    `;
+function renderMessages(){
+  const list=document.getElementById("messageList");
+  list.innerHTML="";
+  const recipient=document.getElementById("messageRecipient").value;
+  const msgs=getMessages();
+  msgs.filter(m=>(m.from===currentUser.email&&(!recipient||m.to===recipient))||(m.to===currentUser.email&&(!recipient||m.from===recipient)))
+      .forEach(m=>{const p=document.createElement("p");p.textContent=`${m.from===currentUser.email?'You':m.senderName||m.from}: ${m.text}`;list.appendChild(p);});
+}
 
-    const editBtn = tr.querySelector('.edit-btn');
-    const saveBtn = tr.querySelector('.save-btn');
-    const deleteBtn = tr.querySelector('.delete-btn');
-    const gradeSpan = tr.querySelector('.grade');
-    const attendanceSpan = tr.querySelector('.attendance');
+document.getElementById("sendMessageBtn").addEventListener("click", () => {
+  const to = document.getElementById("messageRecipient").value;
+  const text = document.getElementById("messageText").value.trim();
+  if (!to || !text) { alert("Select recipient and type a message."); return; }
+  const msgs = getMessages();
+  msgs.push({
+    from: currentUser.email,
+    senderName: currentUser.name,
+    to: to,
+    text: text
+  });
+  saveMessages(msgs);
+  document.getElementById("messageText").value = "";
+  renderMessages();
+  showToast("✅ Message sent");
+});
 
-    editBtn.addEventListener('click', () => {
-      gradeSpan.innerHTML = `<input type="number" value="${student.grade}">`;
-      attendanceSpan.innerHTML = `<input type="number" value="${student.attendance}">`;
-      editBtn.style.display = 'none';
-      saveBtn.style.display = 'inline-block';
-    });
+document.getElementById("messageRecipient").addEventListener("change",renderMessages);
 
-    saveBtn.addEventListener('click', () => {
-      const newGrade = tr.querySelector('input[type="number"]').value;
-      const newAttendance = tr.querySelectorAll('input[type="number"]')[1].value;
-      student.grade = Number(newGrade);
-      student.attendance = Number(newAttendance);
-      renderStudents();
-    });
-
-    deleteBtn.addEventListener('click', () => {
-      if (confirm(`Are you sure you want to remove ${student.name}?`)) {
-        students = students.filter(s => s.id !== student.id);
-        renderStudents();
-      }
-    });
-
-    tbody.appendChild(tr);
+function renderReports(){
+  const reportContainer=document.getElementById("reportCards");
+  reportContainer.innerHTML="";
+  const enrollments=getEnrollments();
+  const courses={};
+  enrollments.forEach(e=>{if(!courses[e.course]) courses[e.course]={grades:[],attendance:[]}; courses[e.course].grades.push(e.grade); courses[e.course].attendance.push(e.attendance);});
+  Object.keys(courses).forEach(c=>{
+    const avgG=(courses[c].grades.reduce((a,b)=>a+b,0)/courses[c].grades.length||0).toFixed(1);
+    const avgA=(courses[c].attendance.reduce((a,b)=>a+b,0)/courses[c].attendance.length||0).toFixed(1);
+    const card=document.createElement("div"); card.className="card";
+    card.innerHTML=`<h3>${c}</h3><p><strong>Avg Grade:</strong> ${avgG}%</p><p><strong>Avg Attendance:</strong> ${avgA}%</p><p><strong>Students Enrolled:</strong> ${courses[c].grades.length}</p>`;
+    reportContainer.appendChild(card);
   });
 }
 
-// Add new student button
-document.getElementById('addStudentBtn').addEventListener('click', () => {
-  const name = prompt("Enter student name:");
-  const studentNumber = prompt("Enter student number:");
-  const grade = prompt("Enter initial grade:");
-  const attendance = prompt("Enter initial attendance %");
+function renderUploadedMaterials(){
+  const container=document.getElementById('uploadedMaterials');
+  container.innerHTML='';
+  const materials=getMaterials();
+  materials.forEach((m,i)=>{
+    const card=document.createElement('div');
+    card.className='card';
+    card.innerHTML=`<h3>${m.title}</h3><p><strong>Lecturer:</strong> ${m.lecturer}</p>
+      <button onclick="window.open('${m.url}','_blank')">View</button>
+      <a href="${m.url}" download><button>Download</button></a>
+      <button class="deleteBtn" data-i="${i}">Delete</button>`;
+    container.appendChild(card);
+  });
+  document.querySelectorAll('.deleteBtn').forEach(b=>{
+    b.addEventListener('click',()=>{
+      const idx=b.dataset.i;
+      const mats=getMaterials();
+      mats.splice(idx,1);
+      saveMaterials(mats);
+      renderUploadedMaterials();
+      showToast('✅ Material deleted');
+    });
+  });
+}
 
-  if (name && studentNumber) {
-    const newStudent = {
-      id: Date.now(),
-      name,
-      studentNumber,
-      grade: Number(grade) || 0,
-      attendance: Number(attendance) || 0
-    };
-    students.push(newStudent);
-    renderStudents();
-  }
+document.getElementById('uploadMaterialBtn').addEventListener('click',()=>{
+  const title=document.getElementById('materialTitle').value.trim();
+  const file=document.getElementById('materialFile').files[0];
+  if(!title||!file){alert('Provide title and PDF file'); return;}
+  const reader=new FileReader();
+  reader.onload=function(e){
+    const mats=getMaterials();
+    mats.push({title,lecturer:currentUser.name,url:e.target.result});
+    saveMaterials(mats);
+    renderUploadedMaterials();
+    showToast('✅ Material uploaded');
+    document.getElementById('materialTitle').value='';
+    document.getElementById('materialFile').value='';
+  };
+  reader.readAsDataURL(file);
 });
-
-// Logout functionality
-document.getElementById('logoutBtn').addEventListener('click', () => {
-  localStorage.removeItem('currentUser');
-  window.location.href = "login.html";
-});
-
-// Initial render
-renderStudents();
 </script>
 </body>
 </html>
