--- a/register.html
+++ b/register.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>School Management System - Register</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>School Management System - Register</title>
+<style>
+body { font-family: Arial, sans-serif; background: #f4f6f8; margin:0; padding:0; }
+header { background:#2c3e50; color:white; padding:15px 20px; display:flex; justify-content:space-between; align-items:center; }
+header .logo-img { height:40px; }
+nav ul { list-style:none; display:flex; gap:15px; margin:0; padding:0; }
+nav ul li a { color:white; text-decoration:none; }
+.login-container { max-width:400px; margin:50px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 3px 6px rgba(0,0,0,0.1); }
+input, select, button { width:100%; margin:8px 0; padding:8px; border-radius:5px; border:1px solid #ccc; }
+button { background:#2980b9; color:white; border:none; cursor:pointer; }
+#errorMsg { color:red; margin-top:10px; }
+</style>
 </head>
 <body>
+
 <header>
-  <div class="logo">
-    <img src="image/school-management-system-logo.png" alt="School Logo" class="logo-img">
-  </div>
+  <div class="logo"><img src="image/school-management-system-logo.png" alt="Logo" class="logo-img"></div>
   <nav>
     <ul>
       <li><a href="home.html">Home</a></li>
@@ -24,57 +33,74 @@
   <form id="registerForm">
     <label for="name">Name:</label>
     <input type="text" id="name" required>
-
     <label for="email">Email:</label>
     <input type="email" id="email" required>
-
     <label for="password">Password:</label>
     <input type="password" id="password" required>
-
     <label for="userType">User Type:</label>
     <select id="userType" required>
       <option value="STUDENT">Student</option>
       <option value="LECTURER">Lecturer</option>
     </select>
-
-    <button type="submit" class="btn">Register</button>
+    <button type="submit">Register</button>
   </form>
   <p>Already have an account? <a href="login.html">Login</a></p>
-  <p id="errorMsg" style="color:red; margin-top:10px;"></p>
+  <p id="errorMsg"></p>
 </div>
 
 <script>
-const registerForm = document.getElementById('registerForm');
+const form = document.getElementById('registerForm');
 const errorMsg = document.getElementById('errorMsg');
 
-registerForm.addEventListener('submit', async (e) => {
+form.addEventListener('submit', async (e) => {
   e.preventDefault();
 
   const user = {
     name: document.getElementById('name').value,
     email: document.getElementById('email').value,
     password: document.getElementById('password').value,
-    userType: document.getElementById('userType').value
+    userType: document.getElementById('userType').value,
+    studentNumber: ''
   };
-try {
-   const response = await fetch('http://localhost:8080/schoolmanagementsystem/user/register', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(user)
-});
 
-    if (!response.ok) {
-        const errorText = await response.text();
-        alert("Registration failed: " + errorText);
-        return;
+  try {
+    // 🔹 Backend registration
+    const res = await fetch('http://localhost:8080/schoolmanagementsystem/user/register', {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify(user)
+    });
+
+    if(!res.ok){
+      const txt = await res.text();
+      alert("Registration failed: " + txt);
+      return;
     }
 
-    alert("Registration successful! Please login.");
+    // 🔹 Frontend dashboard initialization
+    let allUsers = JSON.parse(localStorage.getItem('users')) || [];
+
+    if(user.userType === 'STUDENT'){
+      // Assign a frontend student number if backend doesn't provide
+      if(!user.studentNumber) user.studentNumber = "2"+Math.floor(1000+Math.random()*9000);
+
+      // Initialize default courses & enrollments
+      const modules = ["CNF2","ADT2","ADP2","IT2","PROJECT2"];
+      let enrollments = JSON.parse(localStorage.getItem('enrollments'))||[];
+      modules.forEach(course => enrollments.push({studentNumber:user.studentNumber, course, grade:0, attendance:0}));
+      localStorage.setItem('enrollments', JSON.stringify(enrollments));
+    }
+
+    allUsers.push(user);
+    localStorage.setItem('users', JSON.stringify(allUsers));
+
+    alert("✅ Registration successful! Please login.");
     window.location.href = "login.html";
-} catch (err) {
+
+  } catch(err){
     console.error(err);
     alert("Server error. Try again later.");
-}
+  }
 });
 </script>
 </body>
