--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -1,93 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Dashboard - SchoolMS</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Student Dashboard</title>
+<style>
+body{font-family:Arial,sans-serif;margin:0;padding:0;background:#f4f6f8;display:flex;}
+.sidebar{width:220px;background:#2c3e50;color:white;height:100vh;position:fixed;display:flex;flex-direction:column;}
+.sidebar h2{text-align:center;padding:20px 0;border-bottom:1px solid #3e4e5e;margin:0;}
+.sidebar ul{list-style:none;padding:0;margin:0;flex:1;}
+.sidebar ul li{border-bottom:1px solid #3e4e5e;}
+.sidebar ul li a{display:block;padding:15px 20px;color:white;text-decoration:none;transition:0.3s;}
+.sidebar ul li a:hover, .sidebar ul li a.active{background:#2980b9;}
+.main{margin-left:220px;padding:20px;flex:1;}
+header{display:flex;justify-content:space-between;align-items:center;background:#fff;padding:10px 20px;box-shadow:0 2px 4px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000;}
+table{width:100%;border-collapse:collapse;margin-top:20px;background:#fff;box-shadow:0 3px 6px rgba(0,0,0,0.1);border-radius:10px;overflow:hidden}
+table th,table td{padding:12px;text-align:left;border-bottom:1px solid #ddd}
+table th{background:#2c3e50;color:white}
+.card{background:#fff;padding:20px;border-radius:10px;box-shadow:0 3px 6px rgba(0,0,0,0.1);margin-bottom:20px;}
+.low-grade{color:#e74c3c;font-weight:bold}
+.low-attendance{color:#f39c12;font-weight:bold}
+.card-container{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;margin-top:20px;}
+.message-container{margin-top:20px;background:#fff;padding:20px;border-radius:10px;box-shadow:0 3px 6px rgba(0,0,0,0.1)}
+.message-container h3{margin-top:0}
+.message-list{max-height:200px;overflow-y:auto;margin-bottom:10px;padding:5px;border:1px solid #ddd;border-radius:5px;background:#f9f9f9}
+.message-list p{margin:5px 0}
+.message-input{display:flex;gap:10px;margin-top:10px}
+.message-input input{flex:1;padding:8px;border-radius:5px;border:1px solid #ccc}
+.message-input button{padding:8px 15px;border-radius:5px;background:#2980b9;color:white;border:none;cursor:pointer}
+#toast{visibility:hidden;min-width:200px;background:#27ae60;color:white;text-align:center;border-radius:8px;padding:10px;position:fixed;bottom:20px;right:20px;opacity:0;transition:opacity 0.5s,visibility 0.5s}
+#toast.show{visibility:visible;opacity:1}
+</style>
 </head>
 <body>
+
+<div class="sidebar">
+  <h2>Student Panel</h2>
+  <ul>
+    <li><a href="#" class="active" data-section="studyMaterials">Study Materials</a></li>
+    <li><a href="#" data-section="dashboard">Dashboard</a></li>
+    <li><a href="#" data-section="messages">Messages</a></li>
+  </ul>
+  <button id="logoutBtn" style="margin:20px;border:none;background:#e74c3c;color:white;padding:10px;border-radius:5px;cursor:pointer;">Logout</button>
+</div>
+
+<div class="main">
 <header>
-  <div class="logo">
-    <img src="image/school-management-system-logo.png" alt="School Logo" class="logo-img">
-  </div>
-  <nav>
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="#" id="logoutBtn">Logout</a></li>
-    </ul>
-  </nav>
+  <h2>Welcome, <span id="studentName"></span>!</h2>
 </header>
 
-<div class="dashboard-container">
-  <h1>Welcome, <span id="userName"></span>!</h1>
-  <p>This is your student dashboard.</p>
+<section id="studyMaterialsSection">
+  <h2>Study Materials</h2>
+  <div id="materialsContainer" class="card-container"></div>
+</section>
 
-  <h2>Your Enrollments</h2>
-  <ul id="enrollmentList"></ul>
+<section id="dashboardSection" style="display:none">
+  <div class="card">
+    <h2>Your Profile</h2>
+    <p><strong>Student Number:</strong> <span id="studentNumber"></span></p>
+  </div>
 
-  <h2>All Students</h2>
-  <ul id="studentList"></ul>
+  <div class="card">
+    <h2>Your Courses</h2>
+    <table id="courseTable">
+      <thead>
+        <tr><th>Course</th><th>Grade</th><th>Attendance</th><th>Status</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</section>
+
+<section id="messagesSection" style="display:none">
+  <div class="message-container">
+    <h3>Messages</h3>
+    <select id="messageRecipient">
+      <option value="">Select Lecturer</option>
+    </select>
+    <div class="message-list" id="messageList"></div>
+    <div class="message-input">
+      <input type="text" id="messageText" placeholder="Type a message...">
+      <button id="sendMessageBtn">Send</button>
+    </div>
+  </div>
+</section>
 </div>
+
+<div id="toast"></div>
 
 <script>
 const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+if(!currentUser || currentUser.userType !== 'STUDENT') window.location.href = "login.html";
+document.getElementById('studentName').textContent = currentUser.name;
+document.getElementById('studentNumber').textContent = currentUser.studentNumber || "N/A";
 
-// Redirect if not a student
-if (!currentUser || currentUser.userType !== "STUDENT") {
-  window.location.href = "login.html";
-} else {
-  document.getElementById('userName').textContent = currentUser.name;
-}
+function showToast(msg){const t=document.getElementById('toast');t.textContent=msg;t.classList.add('show');setTimeout(()=>t.classList.remove('show'),2000)}
 
-// Fetch all students
-async function loadStudents() {
-  try {
-    const response = await fetch(`http://localhost:8080/user/type/STUDENT`);
-    if (!response.ok) throw new Error("Failed to fetch students");
-
-    const students = await response.json();
-    const list = document.getElementById('studentList');
-    list.innerHTML = '';
-
-    students.forEach(s => {
-      const li = document.createElement('li');
-      li.textContent = s.name + " (" + s.email + ")";
-      list.appendChild(li);
-    });
-  } catch (err) {
-    console.error(err);
-  }
-}
-
-// Fetch the student's enrollments
-async function loadEnrollments() {
-  try {
-    const response = await fetch(`http://localhost:8080/enrollment/student/${currentUser.userId}`);
-    if (!response.ok) throw new Error("Failed to fetch enrollments");
-
-    const enrollments = await response.json();
-    const list = document.getElementById('enrollmentList');
-    list.innerHTML = '';
-
-    enrollments.forEach(e => {
-      const li = document.createElement('li');
-      li.textContent = `${e.courseName} - ${e.semester}`;
-      list.appendChild(li);
-    });
-  } catch (err) {
-    console.error(err);
-  }
-}
-
-loadStudents();
-loadEnrollments();
-
-// Logout functionality
-document.getElementById('logoutBtn').addEventListener('click', () => {
-  localStorage.removeItem('currentUser');
-  window.location.href = "login.html";
+const sections={studyMaterials:document.getElementById("studyMaterialsSection"),dashboard:document.getElementById("dashboardSection"),messages:document.getElementById("messagesSection")};
+document.querySelectorAll(".sidebar ul li a").forEach(link=>{
+  link.addEventListener("click",e=>{
+    e.preventDefault();
+    document.querySelectorAll(".sidebar ul li a").forEach(a=>a.classList.remove("active"));
+    link.classList.add("active");
+    Object.keys(sections).forEach(k=>sections[k].style.display=(k===link.dataset.section)?"block":"none");
+    if(link.dataset.section==="studyMaterials"){renderMaterials();}
+    if(link.dataset.section==="messages"){renderRecipients();renderMessages();}
+  });
 });
+
+function getEnrollments(){return (JSON.parse(localStorage.getItem('enrollments'))||[]).filter(e=>e.studentNumber===currentUser.studentNumber)}
+function renderCourses(){
+  const tbody=document.querySelector("#courseTable tbody");
+  tbody.innerHTML="";
+  const courses=getEnrollments();
+  courses.forEach(c=>{
+    let status="Good Standing";
+    if(c.grade<50) status="At Risk: Low Grade";
+    else if(c.attendance<75) status="At Risk: Low Attendance";
+    const tr=document.createElement("tr");
+    tr.innerHTML=`<td>${c.course}</td><td class="${c.grade<50?'low-grade':''}">${c.grade}</td><td class="${c.attendance<75?'low-attendance':''}">${c.attendance}%</td><td>${status}</td>`;
+    tbody.appendChild(tr);
+  });
+}
+
+function getMaterials(){return JSON.parse(localStorage.getItem('studyMaterials'))||[];}
+function renderMaterials(){
+  const container=document.getElementById('materialsContainer');
+  container.innerHTML='';
+  const materials=getMaterials();
+  materials.forEach(m=>{
+    const card=document.createElement('div');
+    card.className='card';
+    card.innerHTML=`<h3>${m.title}</h3><p><strong>Lecturer:</strong> ${m.lecturer}</p>
+      <button onclick="window.open('${m.url}','_blank')">View</button>
+      <a href="${m.url}" download><button>Download</button></a>`;
+    container.appendChild(card);
+  });
+}
+
+// Messaging
+function getMessages(){return JSON.parse(localStorage.getItem('messages'))||[];}
+function renderRecipients() {
+  const sel = document.getElementById("messageRecipient");
+  sel.innerHTML = '<option value="">Select Lecturer</option>';
+  const users = JSON.parse(localStorage.getItem('users')) || [];
+  users.filter(u=>u.userType==='LECTURER').forEach(u=>{
+    const opt=document.createElement("option"); opt.value=u.email; opt.textContent=u.name; sel.appendChild(opt);
+  });
+}
+
+function renderMessages(){
+  const list=document.getElementById('messageList');
+  list.innerHTML="";
+  const recipient=document.getElementById("messageRecipient").value;
+  const msgs=getMessages().filter(m=> 
+      (m.to===currentUser.email && (!recipient || m.from===recipient)) || 
+      (m.from===currentUser.email && (!recipient || m.to===recipient))
+  );
+  msgs.forEach(m=>{
+    const p=document.createElement('p');
+    p.textContent=`${m.from===currentUser.email?'You':m.senderName || m.from}: ${m.text}`;
+    list.appendChild(p);
+  });
+  list.scrollTop = list.scrollHeight;
+}
+
+document.getElementById("sendMessageBtn").addEventListener("click",()=>{
+  const to = document.getElementById("messageRecipient").value;
+  const text = document.getElementById("messageText").value.trim();
+  if(!to || !text){alert("Select recipient and type a message."); return;}
+  const msgs = getMessages();
+  msgs.push({from:currentUser.email, senderName:currentUser.name, to, text});
+  localStorage.setItem('messages', JSON.stringify(msgs));
+  document.getElementById("messageText").value="";
+  renderMessages();
+  showToast("✅ Message sent");
+});
+document.getElementById("messageRecipient").addEventListener("change", renderMessages);
+
+document.getElementById("logoutBtn").addEventListener("click",()=>{localStorage.removeItem('currentUser');window.location.href="login.html";});
+
+renderCourses();
+renderMaterials();
+renderRecipients();
+setInterval(renderMessages,1000);
 </script>
 </body>
 </html>
